# rgb-led-cube

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config
cad/: .gitignore  jig.py
src/: dither.rs  lib.rs  main.rs
