
[package]
authors = ["Ben Simms <ben@bensimms.moe>"]
name = "led_test"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[package.metadata]
chip = "STM32F103C8T6"

[dependencies]
cichlid = { version = "0.2.1", features = ["no-std", "nightly"], git = "https://github.com/simmsb/cichlid.git" }
cortex-m = { version = "0.7.5", features = ["linker-plugin-lto", "inline-asm"] }
cortex-m-rt = "0.7.1"
critical-section = "0.2.7"
defmt = "0.3.2"
defmt-rtt = { version = "0.3.2", optional = true }
embassy = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["time-tick-32768hz", "nightly"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["nightly", "unstable-traits", "stm32f103c8", "memory-x", "time-driver-any"] }
embedded-hal = "0.2.7"
fugit = "0.3.6"
micromath = "2.0.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
smart-leds = "0.3.0"
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103", "medium"] }
ws2812-spi = { version = "0.4.0", features = [] }


[features]
default = ["debugger"]
debugger = ["panic-probe", "defmt-rtt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 1           # <-
overflow-checks = true  # <-
# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3           # <-
overflow-checks = false # <-
